<resources>
    <string name="app_name">My Oral Village</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="nav_transactions">Transactions</string>
    <string name="nav_scan">Scan</string>
    <string name="nav_history">History</string>
    <string name="nav_user">User</string>

    <string name="title_send">Send Money</string>
    <string name="title_request">Request Money</string>
    <string name="title_scan">Scan and Pay</string>
    <string name="title_history">Transaction History</string>
    <string name="title_edit_profile">Edit Profile</string>

    <string name="title_activity_scan_qr">Scan a QR Code</string>
    <string name="title_activity_display_qr">Your QR Code</string>


    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="transaction_selection_header">Transactions</string>
    <string name="transactions_send_money">Send Money</string>
    <string name="transactions_request_money">Request Money</string>
    <string name="transaction_amount_selection_header">Select Amount</string>
    <string name="transaction_select_contact_header">Select Contact</string>
    <string name="transaction_confirm_header">Confirm</string>
    <string name="transaction_confirm_progress_sending">Sending&#8230;</string>
    <string name="transaction_confirm_progress_requesting">Requesting&#8230;</string>
    <string name="transaction_confirm_failure">Transaction Failed</string>
    <string name="transaction_confirm_failure_okay">Okay</string>
    <string name="transaction_next">Next</string>
    <string name="transaction_back">Back</string>
    <string name="transaction_send">Send</string>
    <string name="transaction_request">Request</string>
    <string name="transaction_recent_contacts">Recent Contacts</string>
    <string name="transaction_amount">Amount</string>

    <string name="project_title">My Oral Village</string>

    <string name="login_hint_phone">Phone Number</string>
    <string name="login_hint_code">Code</string>
    <string name="login_button_login">Log In</string>
    <string name="login_button_sign_up">Sign Up</string>
    <string name="login_button_code">Verify</string>
    <string name="login_button_try_again">Try Again</string>
    <string name="login_error_blank_number">Enter a number</string>
    <string name="login_error_length">Not long enough</string>
    <string name="login_error_invalid_code">Invalid code</string>
    <string name="login_error_invalid_number">Invalid number</string>

    <string name="login_completion_header">Your Profile</string>
    <string name="login_completion_field_first_name">Full Name</string>
    <string name="login_completion_field_last_name">Last Name</string>
    <string name="login_completion_button_submit">Continue</string>
    <string name="login_completion_error_empty_name">Enter a name</string>

    <string name="Transaction_Title">Most Recent Transaction</string>
    <string name="History_Hint">input user\'s name</string>
    <string name="confirm">confirm</string>
    <string name="blank">…</string>
    <string name="on">on</string>
    <string name="sent">sent</string>
    <string name="transaction">Recent Transaction</string>
    <string name="title_activity_view_transactions">ViewTransactions</string>
    <string name="Recent_Transactions">Recent Transactions</string>

    <string name="login_completion_button_photo_take">Take</string>
    <string name="login_completion_button_photo_select">Select</string>
    <string name="login_completion_dialog_add_photo">Add a Photo</string>
    <string name="login_completion_currency">Currency</string>

    <string name="user_fragment_logout">Log Out</string>
    <string name="user_fragment_show_qr">Show QR</string>
    <string name="user_fragment_save">Save</string>
    <string name="user_contacts">Contacts</string>
    <string name="user_edit">Edit Profile</string>

    <string name="contacts_search">Search</string>
    <string name="contacts_empty">No Contacts</string>
    <string name="add_contact_phone_search">Search</string>
    <string name="add_contact_phone_enter_number">Enter a valid number</string>
    <string name="add_contact_phone_not_found">No users found</string>
    <string name="add_contact_phone_add">Add</string>

    <string name="contact_remove">Remove</string>

    <string name="title_activity_add_contact_phone">New Contact</string>
    <string name="title_user_qr">Your QR Code</string>

    <string name="incoming_money_requests">Incoming Money Requests</string>
    <string name="outgoing_money_requests">Outgoing Money Requests</string>
    <string name="title_activity_contacts">Contacts</string>
    <string name="title_activity_add_contact">Add Contact</string>
    <string name="title_activity_history_transaction"> </string>
    <string name="send_or_receive">send_or_receive</string>
    <string name="image_of_other_user">image_of_other_user</string>
    <string name="image_of_sender_user">image_of_sender_user</string>
    <string name="image_of_receiver_user">image_of_receiver_user</string>
    <string name="textview">TextView</string>
    <string name="phone2">Receive Number</string>
    <string name="phone1">Send Number</string>
    <string name="date">Date</string>
    <string name="transaction_currency">Currency</string>
    <string name="image_of_phone">image of phone]</string>
    <string name="amount">Amount</string>
    <string name="transaction_detail_hand">transaction_detail_hand</string>
    <string name="transaction_image">transaction_detail_image</string>
    <string name="transaction_detail_currency">transaction_detail_currency</string>
    <string name="transaction_detail_phone_number">transaction_detail_phone_number</string>
    <string name="transaction_detail_date">transaction_detail_date</string>
    <string name="phone_number">Phone Number</string>
    <string name="currency">Currency</string>
    <string name="transaction_detail_date_line">date line</string>
    <string name="transaction_detail_phone">phone image</string>
    <string name="transaction_detail_background">The background for Transaction_details</string>
    <string name="portrait">Portrait around someones face</string>

</resources>
