<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/transaction_history_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/portrait"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerInParent="false"
        android:layout_marginStart="168dp"
        android:layout_marginLeft="168dp"
        android:layout_marginTop="80dp"
        app:srcCompat="@drawable/portrait"
        android:contentDescription="@string/portrait" />

    <ImageView
        android:id="@+id/transaction_detail_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="false"
        android:layout_marginStart="178dp"
        android:layout_marginLeft="178dp"
        android:layout_marginTop="90dp"

        android:contentDescription="@string/transaction_image"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/transaction_detail_date_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/transaction_detail_date"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="9dp"
        android:contentDescription="@string/transaction_detail_date_line"
        app:srcCompat="@drawable/month_00" />

    <ImageView
        android:id="@+id/transaction_detail_phone"
        android:layout_width="81dp"
        android:layout_height="183dp"
        android:layout_below="@+id/transaction_detail_image"
        android:layout_marginTop="189dp"
        android:contentDescription="@string/transaction_detail_phone"
        app:srcCompat="@drawable/phone" />

    <TextView
        android:id="@+id/transaction_detail_phone_number"
        android:layout_width="198dp"
        android:layout_height="69dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="464dp"
        android:layout_toEndOf="@+id/transaction_detail_phone"
        android:layout_toRightOf="@+id/transaction_detail_phone"
        android:contentDescription="@string/transaction_detail_phone_number"
        android:text="@string/phone_number"
        android:textColor="#000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/transaction_detail_date"
        android:layout_width="217dp"
        android:layout_height="38dp"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@+id/transaction_detail_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170dp"
        android:contentDescription="@string/transaction_detail_date"
        android:text="@string/date"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/transaction_detail_hand"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_below="@+id/transaction_detail_image"
        android:layout_centerInParent="true"
        android:layout_marginTop="22dp"
        android:layout_marginLeft="195dp"
        android:scaleX="-1"
        app:srcCompat="@drawable/history_receive_money"
        android:layout_marginStart="195dp"
        android:contentDescription="@string/transaction_detail_hand" />

    <TextView
        android:id="@+id/transaction_detail_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/transaction_detail_phone"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginBottom="20dp"
        android:text="@string/amount"
        android:textColor="#000"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/transaction_detail_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/transaction_detail_date_image"
        android:layout_alignEnd="@+id/transaction_detail_image"
        android:layout_alignRight="@+id/transaction_detail_image"
        android:layout_marginEnd="190dp"
        android:layout_marginRight="190dp"
        android:layout_marginBottom="227dp"
        app:srcCompat="@drawable/flag_cad"
        android:contentDescription="@string/currency" />

</RelativeLayout>