<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/history_transaction_amount"
        android:layout_width="130dp"
        android:layout_height="116dp"
        android:layout_marginTop="10dp"
        android:text="@string/transaction_amount"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/history_transaction_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_of_receiver_user"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/history_send_hand"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:contentDescription="@string/send_or_receive"
        android:scaleType="fitCenter"
        android:visibility="visible"
        tools:srcCompat="@drawable/history_receive_money" />

    <TextView
        android:id="@+id/history_transaction_date"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/date"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/history_transaction_phone"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_of_phone"
        tools:srcCompat="@tools:sample/avatars"
        android:layout_width="1dp" />

    <TextView
        android:id="@+id/history_transaction_to_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone2"
        android:textColor="#000"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/history_transaction_date_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/history_transaction_to_phone"
        android:layout_alignRight="@+id/history_transaction_to_phone"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:contentDescription="@string/image_of_receiver_user"
        tools:srcCompat="@tools:sample/avatars" />

</RelativeLayout>