<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_completion_switcher"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".ui.auth.LoginCompletionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/login_completion_header" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/login_completion_card"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin_half"
            android:visibility="invisible"
            app:backgroundTint="@android:color/white"
            app:cardCornerRadius="40dp"
            app:cardElevation="4dp"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="3dp">

            <ViewSwitcher
                android:id="@+id/login_completion_card_switcher"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/login_completion_card_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:src="@drawable/baseline_person_add_black_48" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/login_completion_card_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp" />

            </ViewSwitcher>


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/login_completion_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin_half"
            android:src="@drawable/baseline_close_black_24"
            android:visibility="invisible"
            app:elevation="2dp"
            app:fabSize="mini" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:hint="@string/login_completion_field_first_name"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:editable="true"
                android:inputType="textPersonName"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:hint="@string/login_hint_phone"
            android:clickable="false"
            android:cursorVisible="false"
            android:maxLines="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_phonenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:clickable="false"
                android:cursorVisible="false"
                android:maxLines="1"
                android:textIsSelectable="false"
                android:editable="false"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:hint="@string/login_completion_currency"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:clickable="false"
            android:cursorVisible="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_currency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:maxLines="1"
                android:textIsSelectable="false"
                android:editable="false"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.rilixtech.CountryCodePicker
            android:id="@+id/user_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

        </com.rilixtech.CountryCodePicker>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/user_save"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/user_fragment_save"
            android:visibility="invisible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/user_logout"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/user_fragment_logout" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/user_contacts"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@drawable/shape_circle_white_border"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="50dp"
                app:strokeWidth="5dp"
                app:cardElevation="3dp"
                app:strokeColor="@color/colorPrimary">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/baseline_people_black_48" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/user_contacts_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin_half"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:text="@string/user_contacts"
                android:layout_gravity="center"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>

    <!--<?xml version="1.0" encoding="utf-8"?>-->
    <!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--tools:context=".ui.user.UserFragment">-->

    <!--<ListView-->
    <!--android:id="@+id/user_listview"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"></ListView>-->



    <!--</FrameLayout>-->